# nectar-lang

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NECTAR.md  README.md  cloudbuild.yaml  install.sh
.claude/worktrees/: honeycomb
.github/workflows/: ci.yml  release.yml
Formula/: nectar-lang.rb
app-build/: generated.rs
apps/payhive/: app.nectar  app.wasm.map  index.html  theme.nectar
canvas_app-build/: app.wasm  generated.rs  index.html
comparison/: index.html
compiler/: Cargo.toml
compiler/src/: ast.rs  borrow_checker.rs  codegen.rs  const_fold.rs  contract_infer.rs  contract_verify.rs  critical_css.rs  dce.rs  devserver.rs  exhaustiveness.rs  formatter.rs  lexer.rs  linter.rs  lsp.rs  main.rs  module_loader.rs  module_resolver.rs  monomorphize.rs  optimizer.rs  package.rs  parser.rs  registry.rs  resolver.rs  runtime_modules.rs  rust_codegen.rs  sourcemap.rs  ssr.rs  ssr_server.rs  stdlib.rs  token.rs  tree_shake.rs  type_checker.rs  wasm_binary.rs  wasm_opt.rs
crates/nectar-layout/: Cargo.toml
crates/nectar-layout/src/: canvas_app.rs  canvas_syscalls.rs  element.rs  hybrid_app.rs  layout.rs  lib.rs  measure.rs  wasm_api.rs
demo/: core.js  examples.html
demo-canvas-build/: generated.rs  index.html
demo-canvas-build/demo-canvas-build/: generated.rs
demo-tree-bench/: apply_patches.py  generate_v3.py  generate_v4.py  mock_bom_server.py  tall_page_test.nectar  tree_bench.nectar  tree_bench_v2.nectar  tree_bench_v3.nectar  tree_bench_v4.nectar
demo-tree-bench/deploy/: Dockerfile  index.html  server.py
demo-tree-bench/tree_bench_v4-build/: generated.rs  index.html
docs/: architecture.md  examples.md  getting-started.md  language-reference.md  nectar-for-ai.md  nectar-spec.json  providers.md  render-modes.md  runtime-api.md  toolchain.md  whitepaper.md
edge/: Dockerfile  deploy.sh
examples/: a11y.nectar  agent-tests.nectar  ai-chat.nectar  alipay-miniprogram-demo.nectar  animations.nectar  api.nectar  app.nectar  auth.nectar  cache.nectar  canvas-demo.nectar  component-tests.nectar  concurrency.nectar  contracts.nectar  core.js  counter.nectar  crypto.nectar  data-table.nectar  database.nectar  debug.html  dnd.nectar  drag-reorder.nectar  error-handling.nectar  feature_test.nectar  filter-sort-demo.html  filter-sort-demo.nectar  filter-sort-demo.wasm.map  full_demo.html  full_demo.nectar  full_demo.wasm.map  gpu-triangle.nectar  hello.nectar  hsm-bridge.nectar  index.html  mini-program.nectar  moov-multi-rail-demo.nectar  observability.nectar  offline-payment.nectar  payments.nectar  pdf.nectar  pills_demo.nectar  (+23 more)
pills_demo-build/: index.html
pills_demo-build/pills_demo-build/: generated.rs
providers/: alipay.js  mapbox.js  moov.js  plaid.js  stripe.js
runtime/: build-runtime.js  nectar-hot-reload.js  nectar-hydration.js  nectar-runtime.js  nectar-service-worker.js  nectar-ssr-runtime.js  nectar-sw-register.js  nectar-test-renderer.js  nectar-test-runner.js
runtime/modules/: atomic.js  auth.js  cache.js  channel.js  contract.js  core.js  db.js  embed.js  env.js  flags.js  form.js  intl.js  lifecycle.js  loader.js  payment.js  pdf.js  permissions.js  pwa.js  seo.js  share.js  time.js  trace.js  upload.js  worker.js
scripts/: build_docs_html.py  build_docs_pages.py  release.sh
server/: Cargo.toml
server/src/: crypto.rs  main.rs
server/src/providers/: alipay.rs  mod.rs  moov.rs  unit.rs
templates/: CLAUDE.md
website/: Dockerfile  README.md  cloudbuild.yaml  nectar.toml  nginx.conf
(+140 files in other folders)
