[package]
name = "nectar-lang"
version = "0.2.1"
edition = "2024"
description = "A compiled-to-WASM frontend language with built-in security, SEO, and mobile support"
license-file = "../LICENSE"
repository = "https://github.com/HibiscusConsulting/nectar-lang"
homepage = "https://buildnectar.com"
keywords = ["wasm", "frontend", "compiler", "language", "web"]
categories = ["compilers", "wasm", "web-programming"]

[[bin]]
name = "nectar"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
semver = "1"
dirs = "6"
sha2 = "0.10"
serde_json = "1"
chrono = "0.4"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
