[package]
name = "nectar-lang"
version = "0.2.5"
edition = "2024"
description = "A compiled-to-WASM frontend language with built-in security, SEO, and mobile support"
license-file = "../LICENSE"
repository = "https://github.com/HibiscusConsulting/nectar-lang"
homepage = "https://buildnectar.com"
keywords = ["wasm", "frontend", "compiler", "language", "web"]
categories = ["compilers", "wasm", "web-programming"]

[[bin]]
name = "nectar"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
semver = "1"
dirs = "6"
sha2 = "0.10"
serde_json = "1"
chrono = "0.4"
ctrlc = "3"
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
wasmtime = "42.0.1"
tower-http = { version = "0.6.8", features = ["fs"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }

[dev-dependencies]
tempfile = "3"
