[workspace]

[package]
name = "nectar-layout"
version = "0.1.0"
edition = "2021"
description = "Portable layout engine for Nectar — compiles to native and WASM"
license = "BSL-1.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]

[features]
default = []
